# src/openapi.yaml
@@ -3311,10 +3311,10 @@ paths:
               $ref: '#/components/headers/X-Is-Form-Designer'
             Content-Language:
               $ref: '#/components/headers/Content-Language'
-  /api/v2/services/:
+  /api/v2/services:
     get:
       operationId: services_list
-      description: List configured services.
+      description: Configured Services
       tags:
       - services
       security:
@@ -7572,6 +7572,7 @@ components:
       - apiRoot
       - apiType
       - label
+      x-experimental: true
     SourceEnum:
       enum:
       - component
